# inventory_daily

./: CMakeLists.txt  main.c
libinv-d/: daily_run.c  daily_run.h  http_request.c  http_request.h  upload_file.c  upload_file.h  write_file.c  write_file.h
